# evaluate_forward_models

./: .gitignore  .gitmodules  git_third_party.sh  pyproject.toml
bash_scripts/benchmark/dense_diff_overlap/: da3.sh  hunyuan.sh  mapa_24v.sh  pi3.sh  pi3x.sh  vggt.sh
bash_scripts/benchmark/dense_n_view/: da3.sh  hunyuan.sh  mapa_24v.sh  mapa_24v_csfm.sh  mapa_24v_mvs.sh  mapa_24v_psfm.sh  pi3.sh  pi3x.sh  uav_mapa.sh  uav_mapa_csfm.sh  uav_mapa_mvs.sh  uav_mapa_psfm.sh  uav_mapa_val.sh  vggt.sh
bash_scripts/benchmark/uav_dense_n_view/: da3.sh  hunyuan.sh  mapa_24v.sh  (+11 more)
benchmarking/dense_n_view/: benchmark.py
configs/: debug_dense_n_view_benchmark.yaml  debug_train.yaml  debug_train_da3_camera_head.yaml  debug_train_semantic.yaml  dense_n_view_benchmark.yaml  depth_completion.yaml
configs/dataset/: benchmark_518_a3d_bmvs.yaml  benchmark_518_a3dscenes_whuomvs.yaml  benchmark_518_a3dscenes_whuomvs_val.yaml  benchmark_518_bmvs.yaml  benchmark_518_synl.yaml  benchmark_518_usegeo.yaml  benchmark_518_usegeo_synl.yaml  benchmark_518_usegeo_synl_bmvs.yaml  benchmark_sv_calib_518_many_ar_a3dscenes.yaml  default.yaml  uavtrain_7d_518_many_ar.yaml  uavtrain_a3d_bmvs_518_many_ar_16ipg_2g.yaml  uavtrain_a3dall_518_many_ar_16ipg_2g.yaml  uavtrain_a3dreal_518_many_ar.yaml  uavtrain_a3dreal_518_many_ar_16ipg_2g.yaml  uavtrain_a3dscenes_518_many_ar.yaml  uavtrain_a3dscenes_depth_completion_518_many_ar.yaml  uavtrain_a3dscenes_semantic_518_many_ar.yaml  uavtrain_a3dsyn_518_many_ar_16ipg_2g.yaml  uavtrain_a3dsynl_518_many_ar_16ipg_2g.yaml  uavtrain_a3dsynl_bmvs_518_many_ar_16ipg_2g.yaml  uavtrain_bmvs_518_many_ar_16ipg_2g.yaml
configs/loss/: da3_camera_head.yaml
configs/machine/: aws.yaml
configs/model/: da3.yaml  hunyuan.yaml  mapanything_da3_camera_head.yaml  pi3.yaml  pi3x.yaml  vggt.yaml  vggt_midmatch.yaml
data_processing/: README.md
data_processing/wai_processing/: pyproject.toml
mapanything/datasets/: __init__.py
mapanything/loss/: __init__.py  da3_camera_head_loss.py
mapanything/models/: __init__.py
mapanything/train/: losses.py  training.py
mapanything/utils/: metrics.py
scripts/: eval_depth_completion.py  replace_depth_by_metric.py  run_depth_completion.py  run_depth_completion.sh  test_vggt.py  train.py  train_vggt_midmatch.py  visualize_benchmark_ply_cams.py  visualize_vggt_attention.py
scripts/viz/: plot_benchmarking_dense_n_view.py  plot_benchmarking_dense_n_view_task.py  plot_dense_view_heat_map.py  plot_dense_view_per_methold.py
(+296 files in other folders)
