[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapanything"
version = "1.1"
description = "Universal Feed-Forward Metric 3D Reconstruction"
readme = "readme.md"
authors = [{ name = "Nikhil Keetha", email = "keethanikhil@gmail.com" }]
requires-python = ">=3.10.0"
dependencies = [
    "huggingface_hub",
    "hydra-core",
    "natsort",
    "opencv-python-headless==4.10.0.84",
    "orjson",
    "pillow-heif",
    "plyfile",
    "python-box",
    "requests",
    "rerun-sdk~=0.24.1",
    "safetensors",
    "tensorboard",
    "tqdm",
    "trimesh",
    "uniception==0.1.6",
    "fastapi>=0.110,<1",
    "pydantic>=2.7,<3",
    "pydantic-core>=2.27,<3",
    "starlette>=0.37,<1",
]

[project.optional-dependencies]
data = ["pandas"]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff"]

colmap = [
    "lightglue @ file:third_party/LightGlue",
    "open3d",
    "pycolmap==3.10.0",
]

gradio = ["gradio==5.47.2", "spaces"]
radio = ["timm"]

# External models for benchmarking (ALL local)
anycalib = ["anycalib @ file:third_party/AnyCalib"]

dust3r = [
    "croco @ file:third_party/croco",
    "dust3r @ file:third_party/dust3r",
]

mast3r = ["mast3r @ file:third_party/mast3r"]
must3r = ["must3r @ file:third_party/must3r"]
pi3 = ["pi3 @ file:third_party/Pi3"]
pow3r = ["pow3r @ file:third_party/pow3r"]
depth-anything-3 = ["depth-anything-3 @ file:third_party/depth-anything-3"]

rmvd = ["rmvd @ file:third_party/robustmvd"]
hunyuanworld-mirror = ["hunyuanworld-mirror @ file:third_party/HunyuanWorld-Mirror"]

# Install all optional dependencies
all = [
    "mapanything[anycalib]",
    "mapanything[colmap]",
    "mapanything[data]",
    "mapanything[depth-anything-3]",
    "mapanything[dev]",
    "mapanything[dust3r]",
    "mapanything[gradio]",
    "mapanything[hunyuanworld-mirror]",
    "mapanything[mast3r]",
    "mapanything[must3r]",
    "mapanything[pi3]",
    "mapanything[pow3r]",
    "mapanything[radio]",
    "mapanything[rmvd]",
]

# Setuptools configuration
[tool.setuptools]
packages = ["mapanything"]

[tool.setuptools.package-data]
"mapanything" = ["**/*"]

[tool.ruff]
lint.extend-select = ["I"]
target-version = "py310"

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
detect-same-package = false
order-by-type = false
known-first-party = ["mapanything", "uniception"]